--- a/style.css
+++ b/style.css
@@ -325,9 +325,41 @@ footer {
     display: grid;
     justify-items: center;
     align-items: center;
-    height: 200px;
+    height: 400px;
     color: #FFFFFF;
-    background-color: #0A0826;
+    background-color: black;
+}
+
+.fotter-container {
+    width: 1160px;
+    margin: auto;
+    /* border-top: 1px solid gray; */
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    height: 120px;
+    align-items: center;
+}
+
+.navigation-bar {
+    display: flex;
+}
+
+.navigation-bar li {
+    list-style: none;
+    margin: 15px;
+}
+
+.navigation-bar li a {
+    text-decoration: none;
+    color: #3A3A3A;
+    font-weight: 700;
+    font-size: 16px;
+    padding: 10px 10px;
+    position: relative;
+
 }
 
 .footer-info {
@@ -336,26 +368,19 @@ footer {
     text-align: center;
 }
 
-.footer-info h3 {
+.footer-info h1 {
     font-size: 25px;
     font-weight: 700;
     line-height: 36px;
 }
 
-.footer-info p {
-    font-size: 14px;
-    color: #D9DBE1;
-    line-height: 24px;
-    font-weight: 500;
-}
-
-footer i {
+footer .footer-social-icon i {
     padding-left: 6px;
     margin: 0px 12px;
     font-size: 20px;
     color: #ffffff;
-    border: 1px solid #00887a;
-    background: #00887a;
+    border: 1px solid #242582;
+    background: #242582;
     border-radius: 80px;
     width: 35px;
     height: 35px;
@@ -369,9 +394,6 @@ footer i {
         max-width: 100%;
     }
 
-    .navigation-bar {
-        display: none;
-    }
 
     .banner {
         display: grid;
@@ -425,94 +447,190 @@ footer i {
 
     }
 
-    .partner-container {
-        width: 100%;
 
-    }
-
-    .partner-company-logos {
-
-        grid-template-columns: repeat(4, 1fr);
-
-    }
-
-    .partner-company-logo img {
-        width: 60px;
-    }
-
-    .product-container {
+    .blog-container {
         max-width: 100%;
     }
 
-    .populer-products {
+    .more-blogs-section {
+        max-width: 100%;
+        margin-left: 0px;
+    }
+
+    .populer-blogs {
         grid-template-columns: repeat(1, 1fr);
     }
 
-    .product {
+    .more-blogs {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0px;
+    }
+
+    .blog {
         width: 350px;
         margin: 10px 80px;
 
 
     }
 
-    .product-img {
+    .blog-img {
         margin-top: 10px;
     }
 
-    .news-container {
-        width: 100%;
-        margin: 0 auto;
-    }
 
-    .news-letter {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        background-color: #336699;
-        height: 200px;
-        align-items: center;
-        margin-bottom: 100px;
-        border-radius: 5px;
-    }
-
-    .news-letter-title {
-        display: flex;
-        flex-direction: row;
-
-    }
-
-    .news-letter-title h3 {
-        font-size: 15px;
-
-    }
-
-    .news-letter-title p {
-        font-size: 12px;
-        width: 400px;
-        margin-right: 0px;
-    }
-
-    .news-letter-icon {
-        font-size: 40px;
-        margin-left: 20px;
-
-    }
-
-    .news-letter-email {
-        width: 400px;
-        height: 30px;
-        margin-left: 40px;
-        border-radius: 5px;
+    .fotter-container {
+        max-width: 100%;
         border: none;
-        padding-left: 15px;
-        font-size: 14px;
+
 
     }
 
-    .subscribe-btn {
-        margin: 15px 25px;
+    nav {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
     }
+
+    .navigation-bar {
+        display: grid;
+    }
+
+
+
+
+    footer .footer-social-icon {
+        display: hidden;
+    }
+
+    footer {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+
 
 }
 
+@media only screen and (max-width: 920px) {
+    /* .header-container {
+        max-width: 100%;
+    }
+
+
+    .banner {
+        display: grid;
+        grid-template-columns: 1fr;
+        height: calc(100vh -120px);
+        margin-top: 20px;
+
+    }
+
+    .banner-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        margin-bottom: 80px;
+    }
+
+    .banner-left h1 {
+        font-size: 30px;
+        line-height: 40px;
+
+
+    }
+
+    .banner-left p {
+        font-size: 15px;
+        margin: 20px 0px;
+        align-items: center;
+        width: 350px;
+
+    }
+
+    .primary-btn {
+        padding: 10px 20px;
+    }
+
+    .banner-right {
+
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-position: center;
+        background-size: 350px;
+
+    }
+
+    .banner-right img {
+        width: 60%;
+        margin: 0px 0px 0px 20px;
+
+    }
+ */
+
+    .blog-container {
+        max-width: 100%;
+    }
+
+    .more-blogs-section {
+        max-width: 100%;
+        margin-left: 0px;
+    }
+
+    .populer-blogs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .more-blogs {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0px;
+    }
+
+    .blog {
+        width: 350px;
+        margin: 10px 80px;
+
+
+    }
+
+    .blog-img {
+        margin-top: 10px;
+    }
+
+
+    .fotter-container {
+        max-width: 100%;
+        border: none;
+
+
+    }
+
+    nav {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
+    }
+
+    .navigation-bar {
+        display: grid;
+    }
+
+
+
+
+    footer .footer-social-icon {
+        display: hidden;
+    }
+
+    footer {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+
+
+}
 
 /* Media quaries end */
